grammar.js
		source_file: $ => repeat(choice($.line,$._empty_line)),
		
		// Program lines
		line: $ => seq($.linenum,
			repeat(':'),
			repeat(seq($.statement,repeat1(':'))),
			seq($.statement,repeat(':')),
			$._newline),
		linenum: $ => / *[0-9][0-9 ]*/,
		_newline: $ => /\r?\n/,
		_empty_line: $ => /\r?\n/, // Would not exist on real Apple II

		// Assign a rule to all tokenized statements and functions
		// These are taken from Table H-3 in Ref. 2

			tok_end: $ => /[Ee] *[Nn] *[Dd]/,
			tok_for: $ => /[Ff] *[Oo] *[Rr]/,
			tok_next: $ => /[Nn] *[Ee] *[Xx] *[Tt]/,
			tok_data: $ => /[Dd] *[Aa] *[Tt] *[Aa]/,
			tok_gr: $ => /[Gg] *[Rr]/,
			tok_call: $ => /[Cc] *[Aa] *[Ll] *[Ll]/,
			tok_plot: $ => /[Pp] *[Ll] *[Oo] *[Tt]/,
			tok_hlin: $ => /[Hh] *[Ll] *[Ii] *[Nn]/,
			tok_vlin: $ => /[Vv] *[Ll] *[Ii] *[Nn]/,
			tok_hgr2: $ => /[Hh] *[Gg] *[Rr] *[22]/,
			tok_hgr: $ => /[Hh] *[Gg] *[Rr]/,
			tok_hcoloreq: $ => /[Hh] *[Cc] *[Oo] *[Ll] *[Oo] *[Rr] *[==]/,
			tok_hplot: $ => /[Hh] *[Pp] *[Ll] *[Oo] *[Tt]/,
			tok_draw: $ => /[Dd] *[Rr] *[Aa] *[Ww]/,
			tok_xdraw: $ => /[Xx] *[Dd] *[Rr] *[Aa] *[Ww]/,
			tok_home: $ => /[Hh] *[Oo] *[Mm] *[Ee]/,
			tok_roteq: $ => /[Rr] *[Oo] *[Tt] *[==]/,
			tok_scaleeq: $ => /[Ss] *[Cc] *[Aa] *[Ll] *[Ee] *[==]/,
			tok_shload: $ => /[Ss] *[Hh] *[Ll] *[Oo] *[Aa] *[Dd]/,
			tok_trace: $ => /[Tt] *[Rr] *[Aa] *[Cc] *[Ee]/,
			tok_notrace: $ => /[Nn] *[Oo] *[Tt] *[Rr] *[Aa] *[Cc] *[Ee]/,
			tok_coloreq: $ => /[Cc] *[Oo] *[Ll] *[Oo] *[Rr] *[==]/,
			tok_vtab: $ => /[Vv] *[Tt] *[Aa] *[Bb]/,
			tok_himem: $ => /[Hh] *[Ii] *[Mm] *[Ee] *[Mm] *[::]/,
			tok_lomem: $ => /[Ll] *[Oo] *[Mm] *[Ee] *[Mm] *[::]/,
			tok_onerr: $ => /[Oo] *[Nn] *[Ee] *[Rr] *[Rr]/,
			tok_resume: $ => /[Rr] *[Ee] *[Ss] *[Uu] *[Mm] *[Ee]/,
			tok_let: $ => /[Ll] *[Ee] *[Tt]/,
			tok_goto: $ => /[Gg] *[Oo] *[Tt] *[Oo]/,
			tok_if: $ => /[Ii] *[Ff]/,
			tok_amp: $ => '&',
			tok_gosub: $ => /[Gg] *[Oo] *[Ss] *[Uu] *[Bb]/,
			tok_return: $ => /[Rr] *[Ee] *[Tt] *[Uu] *[Rr] *[Nn]/,
			tok_rem: $ => /[Rr] *[Ee] *[Mm]/,
			tok_on: $ => /[Oo] *[Nn]/,
			tok_wait: $ => /[Ww] *[Aa] *[Ii] *[Tt]/,
			tok_poke: $ => /[Pp] *[Oo] *[Kk] *[Ee]/,
			tok_print: $ => /[Pp] *[Rr] *[Ii] *[Nn] *[Tt]|\?/,
			tok_to: $ => /[Tt] *[Oo]/,
			tok_then: $ => /[Tt] *[Hh] *[Ee] *[Nn]/,
			tok_at: $ => /[Aa] *[Tt]/,
			tok_plus: $ => '+',
			tok_minus: $ => '-',
			tok_times: $ => '*',
			tok_div: $ => '/',
			tok_or: $ => /[Oo] *[Rr]/,
			tok_gtr: $ => '>',
			tok_eq: $ => '=',
			tok_less: $ => '<',
			tok_usr: $ => /[Uu] *[Ss] *[Rr]/,
			tok_fre: $ => /[Ff] *[Rr] *[Ee]/,
			tok_scrnp: $ => /[Ss] *[Cc] *[Rr] *[Nn] *[\(\(]/,
			tok_atn: $ => /[Aa] *[Tt][Nn]/,
			tok_peek: $ => /[Pp] *[Ee] *[Ee] *[Kk]/,
			tok_chr: $ => /[Cc] *[Hh] *[Rr] *[\$\$]/,
		statement: $ => choice(
			$.assignment,
			// Optional string after CALL is to allow for the CHAIN pattern
			seq($.tok_call,$._aexpr,optional($.str)),
			$.tok_clear,
			seq($.tok_coloreq,$._aexpr),
			$.tok_cont,
			seq($.tok_data,optional($._data_item),repeat(seq(',',optional($._data_item)))),
			seq($.tok_def,$.tok_fn,alias($.name_real,$.name_fn),'(',alias($._real_scalar,$.var_real),')',$.tok_eq,$._aexpr),
			seq($.tok_del,$.linenum,',',$.linenum),
			seq($.tok_dim,$.dim_item,repeat(seq(',',$.dim_item))),
			seq($.tok_draw,$._aexpr,optional(seq($.tok_at,$._aexpr,',',$._aexpr))),
			$.tok_end,
			$.tok_flash,
			seq($.tok_for,alias($._real_scalar,$.var_real),$.tok_eq,$._aexpr,$.tok_to,$._aexpr,optional(seq($.tok_step,$._aexpr))),
			seq($.tok_get,$._var,repeat(seq(',',$._var))),
			seq($.tok_gosub,$.linenum),
			seq($.tok_goto,$.linenum),
			$.tok_gr,
			seq($.tok_hcoloreq,$._aexpr),
			$.tok_hgr,
			$.tok_hgr2,
			seq($.tok_himem,$._aexpr),
			seq($.tok_hlin,$._aexpr,',',$._aexpr,$.tok_at,$._aexpr),
			$.tok_home,
			seq($.tok_hplot,optional($.tok_to),$._aexpr,',',$._aexpr,repeat(seq($.tok_to,$._aexpr,',',$._aexpr))),
			seq($.tok_htab,$._aexpr),
			// Ref. 2 explicitly has the compound statement, but this is implied
			seq($.tok_if,$._expr,$.tok_then,$.statement),
			seq($.tok_if,$._expr,$.tok_then,$.linenum),
			seq($.tok_if,$._expr,$.tok_goto,$.linenum),
			seq($.tok_inn,$._aexpr),
			seq($.tok_input,optional(seq($._sexpr,';')),$._var,repeat(seq(',',$._var))),
			$.tok_inverse,
			$.tok_load, // cassette tape
			seq($.tok_list,optional($.linenum),optional(seq(choice($.tok_minus,','),optional($.linenum)))),
			seq($.tok_lomem,$._aexpr),
			$.tok_new,
			seq($.tok_next,optional(seq($._avar,repeat(seq(',',$._avar))))),
			$.tok_normal,
			$.tok_notrace,
			seq($.tok_on,$._aexpr,choice($.tok_goto,$.tok_gosub),$.linenum,repeat(seq(',',$.linenum))),
			seq($.tok_onerr,$.tok_goto,$.linenum),
			seq($.tok_plot,$._aexpr,',',$._aexpr),
			seq($.tok_poke,$._aexpr,',',$._aexpr),
			$.tok_pop,
			seq($.tok_prn,$._aexpr),
			seq($.tok_print,repeat((choice(',',';',$._expr)))),
			seq($.tok_read,$._var,repeat(seq(',',$._var))),
			seq($.tok_recall,choice(alias($._int_scalar,$.var_int),alias($._real_scalar,$.var_real))), // cassette tape, subscript omitted
			seq($.tok_rem,optional($.comment_text)),
			$.tok_restore,
			$.tok_resume,
			$.tok_return,
			seq($.tok_roteq,$._aexpr),
			seq($.tok_run,optional($.linenum)),
			$.tok_save, // cassette tape
			seq($.tok_scaleeq,$._aexpr),
			$.tok_shload, // cassette tape
			seq($.tok_speedeq,$._aexpr),
			$.tok_stop,
			seq($.tok_store,choice(alias($._int_scalar,$.var_int),alias($._real_scalar,$.var_real))), // cassette tape, subscript omitted
			$.tok_text,
			$.tok_trace,
			seq($.tok_vlin,$._aexpr,',',$._aexpr,$.tok_at,$._aexpr),
			seq($.tok_vtab,$._aexpr),
			seq($.tok_wait,$._aexpr,',',$._aexpr,optional(seq(',',$._aexpr))),
			seq($.tok_xdraw,$._aexpr,optional(seq($.tok_at,$._aexpr,',',$._aexpr))),
			seq($.tok_amp,$.str),
			seq($.tok_amp,'(',$._expr,repeat(seq(',',$._expr)),')')
		),

		comment_text: $ => /.+/,

		assignment: $ => choice(
			seq(optional($.tok_let),$._avar,$.tok_eq,$._aexpr),
			seq(optional($.tok_let),$.var_str,$.tok_eq,$._sexpr)
		),

		// Numerical functions from Appendix A
		// N.b. some have left parenthesis as part of the token

		// following is the general fcall from Ref. 2 (not used)
		//fcall: $=> seq($.name,'(',repeat(seq($._expr,',')),$._expr,')'),
		fcall: $ => choice(
			seq($.tok_abs,'(',$._aexpr,')'),
			seq($.tok_asc,'(',$._sexpr,')'),
			seq($.tok_atn,'(',$._aexpr,')'),
			seq($.tok_cos,'(',$._aexpr,')'),
			seq($.tok_exp,'(',$._aexpr,')'),
			seq($.tok_fn,alias($.name_real,$.name_fn),'(',$._aexpr,')'),
			seq($.tok_fre,'(',$._expr,')'),
			seq($.tok_int,'(',$._aexpr,')'),
			seq($.tok_len,'(',$._sexpr,')'),
			seq($.tok_log,'(',$._aexpr,')'),
			seq($.tok_pdl,'(',$._aexpr,')'),
			seq($.tok_peek,'(',$._aexpr,')'),
			seq($.tok_pos,'(',$._expr,')'),
			seq($.tok_rnd,'(',$._aexpr,')'),
			seq($.tok_scrnp,$._aexpr,',',$._aexpr,')'),
			seq($.tok_sgn,'(',$._aexpr,')'),
			seq($.tok_sin,'(',$._aexpr,')'),
			seq($.tok_sqr,'(',$._aexpr,')'),
			seq($.tok_tan,'(',$._aexpr,')'),
			seq($.tok_usr,'(',$._aexpr,')'),
			seq($.tok_val,'(',$._sexpr,')')
		),

		// String functions from Appendix A
		// N.b. some have left parenthesis as part of the token

		// following is the general sfcall from Ref. 2 (not used)
		//sfcall: $ => seq($.name_str,'(',repeat(seq($._expr,',')),$._expr,')'),
		sfcall: $ => choice(
			seq($.tok_chr,'(',$._aexpr,')'),
			seq($.tok_left,'(',$._sexpr,',',$._aexpr,')'),
			seq($.tok_mid,'(',$._sexpr,',',$._aexpr,optional(seq(',',$._aexpr)),')'),
			seq($.tok_right,'(',$._sexpr,',',$._aexpr,')'),
			seq($.tok_spcp,$._aexpr,')'),
			seq($.tok_str,'(',$._aexpr,')'),
			seq($.tok_tabp,$._aexpr,')')
		),

		// Expressions from Appendix B

		_expr: $ => choice($._aexpr,$._sexpr),

		_aexpr: $ => choice(
			$.real,
			$.int,
			$._avar,
			$.fcall,
			$.unary_aexpr,
			$.binary_aexpr,
			$._parenthesized_aexpr
			// following are the way unary and binary aexpr defined in Ref. 2 (not used)
			//seq($.unop,$._aexpr),
			//seq($._aexpr,$.alop,$._aexpr),
			//seq($._sexpr,$._relop,$._sexpr),
		),
		unary_aexpr: $ => prec(7,choice(
			seq($.tok_plus,$._aexpr),
			seq($.tok_minus,$._aexpr),
			seq($.tok_not,$._aexpr)
		)),
		binary_aexpr: $ => choice(
			prec.left(6,seq($._aexpr,$.tok_pow,$._aexpr)),
			prec.left(5,seq($._aexpr,choice($.tok_times,$.tok_div),$._aexpr)),
			prec.left(4,seq($._aexpr,choice($.tok_plus,$.tok_minus),$._aexpr)),
			prec.left(3,seq($._aexpr,$._relop,$._aexpr)),
			prec.left(3,seq($._sexpr,$._relop,$._sexpr)),
			prec.left(2,seq($._aexpr,$.tok_and,$._aexpr)),
			prec.left(1,seq($._aexpr,$.tok_or,$._aexpr))
		),
		_relop: $ => choice($.tok_eq,$.tok_less,$.tok_gtr,
			seq($.tok_less,$.tok_eq),seq($.tok_eq,$.tok_less),
			seq($.tok_gtr,$.tok_eq),seq($.tok_eq,$.tok_gtr),
			seq($.tok_less,$.tok_gtr),seq($.tok_gtr,$.tok_less)),
		// following are some operator groups defined by Ref.2 but not used here
		//alop: $ => choice($.aop,$._relop,$.lop),
		//aop: $ => choice($.tok_plus,$.tok_minus,$.tok_times,$.tok_div,$.tok_pow),
		//lop: $ => choice($.tok_and,$.tok_or),
		//unop: $ => choice($.tok_plus,$.tok_minus,$.tok_not),

		_sexpr: $ => choice(
			$.str,
			$.var_str,
			$.sfcall,
			$.binary_sexpr,
			$._parenthesized_sexpr
		),
		binary_sexpr: $ => prec.left(1,seq($._sexpr,$._sop,$._sexpr)),
		_sop: $ => $.tok_plus,

		// Variables from Appendix B
		// Renamed: intvar -> var_int, realvar -> var_real, svar -> var_str

		_var: $ => choice($._avar,$.var_str),
		_avar: $ => choice($.var_real,$.var_int),
		var_int: $ => choice($.name_int,$._int_array),
		var_real: $ => choice($.name_real,$._real_array),
		var_str: $ => choice($.name_str,$._str_array),
		subscript: $ => seq('(',$._aexpr,repeat(seq(',',$._aexpr)),')'),
		_data_item: $ => choice(alias($.str,$.data_str),$.data_literal,$.data_int,$.data_real),
		data_literal: $ => token(prec(0,seq(DCHAR_1,repeat(DCHAR_N)))),

		// Literals from Appendix B

		int: $ => token(prec(1,POS_INTEGER)),
		real: $ => token(prec(1,choice(POS_REAL_DOT,POS_REAL_E))),
		str: $ => prec.right(seq('"',RUN,optional('"'))),

		// "Extra" items not in Appendix B
		// These are added for convenience or to account for certain exceptions

		name_real: $ => $._name,
		name_int: $ => seq($._name,'%'),
		name_str: $ => seq($._name,'$'),
		_real_array: $ => prec(1,seq($.name_real,$.subscript)),
		_int_array: $ => prec(1,seq($.name_int,$.subscript)),
		_str_array: $ => prec(1, seq($.name_str,$.subscript)),
		_real_scalar: $ => $.name_real,
		_int_scalar: $ => $.name_int,

		// This is the rule that triggers the external scanner.
		// Due to tree-sitter design, lexing a variable name requires two stages:
		// (i) lookahead: find maximum run of a valid variable name, and return empty token
		// (ii) advance: add the actual characters
		_name: $ => seq($._ext_name,$._ext_name)
	}
});
