test/corpus/control-statements.txt
===================
For Loop 1
===================

10 FOR I = 1 TO 2000 : NEXT I

---

(source_file
	(line
		(linenum)
		(statement
			(tok_for) (var_real (name_real)) (tok_eq) (int) (tok_to) (int))
		(statement
			(tok_next) (var_real (name_real)))))

===================
For Loop 2
===================

10 FOR I = 1 TO 5 : FOR J = 1E2 TO 1.5E4 : NEXT J,I

---

(source_file
	(line
		(linenum)
		(statement
			(tok_for) (var_real (name_real)) (tok_eq) (int) (tok_to) (int))
		(statement
			(tok_for) (var_real (name_real)) (tok_eq) (real) (tok_to) (real))
		(statement
			(tok_next) (var_real (name_real)) (var_real (name_real)))))

===================
Goto
===================

10 GOTO 10

---

(source_file
	(line
		(linenum)
		(statement (tok_goto) (linenum))))

===================
Gosub
===================

10 GOSUB 100
20 END
100 RETURN

---

(source_file
	(line
		(linenum)
		(statement (tok_gosub) (linenum)))
	(line
		(linenum)
		(statement (tok_end)))
	(line
		(linenum)
		(statement (tok_return))))

===================
If-then 1
===================

10 IF X > Y THEN 10

---

(source_file
	(line
		(linenum)
		(statement (tok_if) (binary_aexpr (var_real (name_real)) (tok_gtr) (var_real (name_real))) (tok_then) (linenum))))

===================
If-then 2
===================

10 IF X(A) < > Y THEN GOTO 10

---

(source_file
	(line
		(linenum)
		(statement (tok_if) (binary_aexpr (var_real (name_real) (subscript (var_real (name_real)))) (tok_less) (tok_gtr) (var_real (name_real))) (tok_then)
			(statement (tok_goto) (linenum)))))

===================
If-then 3
===================

10 IF X > Y(1,2) THEN PRINT "X IS BIGGER"

---

(source_file
	(line
		(linenum)
		(statement (tok_if)
			(binary_aexpr (var_real (name_real)) (tok_gtr) (var_real (name_real) (subscript (int) (int))))
			(tok_then)
			(statement (tok_print) (str)))))

===================
On Goto
===================

10 ON X GOTO 10,20,30

---

(source_file
	(line
		(linenum)
		(statement (tok_on) (var_real (name_real)) (tok_goto) (linenum) (linenum) (linenum))))

===================
On Gosub
===================

10 ON X GOSUB 10,20,30

---

(source_file
	(line
		(linenum)
		(statement (tok_on) (var_real (name_real)) (tok_gosub) (linenum) (linenum) (linenum))))

===================
Onerr Goto
===================

10 ONERR GOTO 100
20 END
100 RESUME

---

(source_file
	(line
		(linenum)
		(statement (tok_onerr) (tok_goto) (linenum)))
	(line
		(linenum)
		(statement (tok_end)))
	(line
		(linenum)
		(statement (tok_resume))))
