test/corpus/graphics.txt
===================
Low Resolution
===================

10 GR: COLOR = C(J): PLOT X+1,Y-1
20 HLIN 0,39 AT Y
30 VLIN 10,Y AT X
40 PRINT SCRN(X+1,Y-1)

---

(source_file
	(line
		(linenum)
		(statement (tok_gr))
		(statement (tok_coloreq) (var_real (name_real) (subscript (var_real (name_real)))))
		(statement (tok_plot)
			(binary_aexpr (var_real (name_real)) (tok_plus) (int))
			(binary_aexpr (var_real (name_real)) (tok_minus) (int))))
	(line
		(linenum) (statement (tok_hlin) (int) (int) (tok_at) (var_real (name_real))))
	(line
		(linenum) (statement (tok_vlin) (int) (var_real (name_real)) (tok_at) (var_real (name_real))))
	(line
		(linenum)
		(statement (tok_print) (fcall (tok_scrnp)
			(binary_aexpr (var_real (name_real)) (tok_plus) (int))
			(binary_aexpr (var_real (name_real)) (tok_minus) (int))))))

===================
High Resolution
===================

10 HGR: HCOLOR = C(J) / 8: HPLOT X+1,Y*5
20 HPLOT X,Y TO X+16,Y-16
30 HPLOT TO X2,Y2
40 HPLOT 70,40 TO 210,40 TO X,Y TO A,B
50 HGR2

---

(source_file
	(line
		(linenum)
		(statement (tok_hgr))
		(statement (tok_hcoloreq) (binary_aexpr (var_real (name_real) (subscript (var_real (name_real)))) (tok_div) (int)))
		(statement (tok_hplot) (binary_aexpr (var_real (name_real)) (tok_plus) (int)) (binary_aexpr (var_real (name_real)) (tok_times) (int))))
	(line
		(linenum)
		(statement (tok_hplot) (var_real (name_real)) (var_real (name_real)) (tok_to)
			(binary_aexpr (var_real (name_real)) (tok_plus) (int)) (binary_aexpr (var_real (name_real)) (tok_minus) (int))))
	(line
		(linenum)
		(statement (tok_hplot) (tok_to) (var_real (name_real)) (var_real (name_real))))
	(line
		(linenum)
		(statement (tok_hplot) (int) (int)
			(tok_to) (int) (int)
			(tok_to) (var_real (name_real)) (var_real (name_real))
			(tok_to) (var_real (name_real)) (var_real (name_real))))
	(line
		(linenum)
		(statement (tok_hgr2))))

===================
Shape Tables
===================

10 SHLOAD
20 ROT = 0: SCALE = 1: DRAW 5
30 DRAW 1 AT 140,96
40 DRAW SHAPE AT XCENTER + XOFFSET,YCENTER + YOFFSET
20 ROT = 0: SCALE = 1: XDRAW 5
30 XDRAW 1 AT 140,96
40 XDRAW SHAPE AT XCENTER + XOFFSET,YCENTER + YOFFSET

---

(source_file
	(line
		(linenum)
		(statement (tok_shload)))
	(line
		(linenum)
		(statement (tok_roteq) (int))
		(statement (tok_scaleeq) (int))
		(statement (tok_draw) (int)))
	(line
		(linenum)
		(statement (tok_draw) (int) (tok_at) (int) (int)))
	(line
		(linenum)
		(statement (tok_draw) (var_real (name_real)) (tok_at)
			(binary_aexpr (var_real (name_real)) (tok_plus) (var_real (name_real)))
			(binary_aexpr (var_real (name_real)) (tok_plus) (var_real (name_real)))))
	(line
		(linenum)
		(statement (tok_roteq) (int))
		(statement (tok_scaleeq) (int))
		(statement (tok_xdraw) (int)))
	(line
		(linenum)
		(statement (tok_xdraw) (int) (tok_at) (int) (int)))
	(line
		(linenum)
		(statement (tok_xdraw) (var_real (name_real)) (tok_at)
			(binary_aexpr (var_real (name_real)) (tok_plus) (var_real (name_real)))
			(binary_aexpr (var_real (name_real)) (tok_plus) (var_real (name_real))))))
