test/corpus/utility.txt
===================
Peek and Poke
===================

10 V1 = PEEK(A*16 + 5) : V2 = PEEK(255)
20 POKE A1,V1 : POKE A*16 + 5,V2*2 / Y
30 POKE 255,0

---

(source_file
	(line
		(linenum)
		(statement
			(assignment (var_real (name_real)) (tok_eq) (fcall (tok_peek)
				(binary_aexpr (binary_aexpr (var_real (name_real)) (tok_times) (int)) (tok_plus) (int)))))
		(statement
			(assignment (var_real (name_real)) (tok_eq) (fcall (tok_peek) (int)))))
	(line
		(linenum)
		(statement (tok_poke) (var_real (name_real)) (var_real (name_real)))
		(statement (tok_poke)
			(binary_aexpr (binary_aexpr (var_real (name_real)) (tok_times) (int)) (tok_plus) (int))
			(binary_aexpr (binary_aexpr (var_real (name_real)) (tok_times) (int)) (tok_div) (var_real (name_real)))))
	(line
		(linenum)
		(statement (tok_poke) (int) (int))))

===================
Call and USR
===================

10 CALL 54915
20 CALL -936
30 CALL ROUTINE (J)
40 PRINT USR (3)

---

(source_file
	(line (linenum) (statement (tok_call) (int)))
	(line (linenum) (statement (tok_call) (unary_aexpr (tok_minus) (int))))
	(line (linenum) (statement (tok_call) (var_real (name_real) (subscript (var_real (name_real))))))
	(line (linenum) (statement (tok_print) (fcall (tok_usr) (int)))))

===================
Wait
===================

10 WAIT 49347, 15
20 WAIT 49401, 240, 192
30 WAIT ADDR%, M1%, M2%

---

(source_file
	(line (linenum) (statement (tok_wait) (int) (int)))
	(line (linenum) (statement (tok_wait) (int) (int) (int)))
	(line (linenum) (statement (tok_wait) (var_int (name_int)) (var_int (name_int)) (var_int (name_int)))))

===================
Memory Management
===================

10 HIMEM: 24576
20 LOMEM: 16384
30 LET AVAIL = FRE(0)

---

(source_file
	(line (linenum) (statement (tok_himem) (int)))
	(line (linenum) (statement (tok_lomem) (int)))
	(line (linenum) (statement (assignment (tok_let) (var_real (name_real)) (tok_eq) (fcall (tok_fre) (int))))))

===================
Debugging
===================

10 TRACE
20 NOTRACE

---

(source_file
	(line (linenum) (statement (tok_trace)))
	(line (linenum) (statement (tok_notrace))))

===================
Ampersand Function
===================

110 & ("cmd",X+Y,CHR$(X))
130 & SOLVE(X,Y,A*B)

---

(source_file
	(line
		(linenum)
		(statement
			(tok_amp)
			(str)
			(binary_aexpr
				(var_real (name_real)) (tok_plus) (var_real (name_real)))
			(sfcall (tok_chr) (var_real (name_real)))))
	(line
		(linenum)
		(statement
			(tok_amp) (name_amp) (var_real (name_real)) (var_real (name_real))
			(binary_aexpr
				(var_real (name_real)) (tok_times) (var_real (name_real)))))
)

===================
Ampersand Statement
===================

100 & "string argument"
120 & LINE TO X,Y
140 & "PLOT" X,Y TO A,B

---

(source_file
	(line
		(linenum)
		(statement (tok_amp) (str)))
	(line
		(linenum)
		(statement
			(tok_amp) (name_amp) (tok_to) (var_real (name_real)) (var_real (name_real))))
	(line
		(linenum)
		(statement
			(tok_amp) (str)
			(var_real (name_real)) (var_real (name_real))
			(tok_to)
			(var_real (name_real)) (var_real (name_real))))
)

===================
Ampersand Retoken
===================

100 & PRINT "custom print" AT 10,20
120 & HPLOT TO 10,20

---

(source_file
	(line
		(linenum)
		(statement (tok_amp) (name_amp (tok_print)) (str) (tok_at) (int) (int)))
	(line
		(linenum)
		(statement (tok_amp) (name_amp (tok_hplot)) (tok_to) (int) (int)))
)

===================
Ampersand Separators
===================

100 & MODE = 1
120 & PR USNG > "000.00";A,B
130 & XPR / "1" <> A$

---

(source_file
	(line
		(linenum)
		(statement (tok_amp) (name_amp) (tok_eq) (int)))
	(line
		(linenum)
		(statement (tok_amp) (name_amp) (tok_gtr) (str) (var_real (name_real)) (var_real (name_real)) ))
	(line
		(linenum)
		(statement (tok_amp) (name_amp) (tok_div) (binary_aexpr (str) (tok_less) (tok_gtr) (var_str (name_str))) ))
)
